<resources>
    <string name="app_name">Tour Guide Madrid</string>
    <string name="horario">Horario:</string>
    <string name="direccion">Dirección:</string>
    <string name="precio">Precio:</string>
    <string name="web">Web</string>
    <string name="mapa">Mapa</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sights_Tab">Dónde ir</string>
    <string name="tapas_Tab">Tapas</string>
    <string name="ocio_Tab">Ocio</string>
    <string name="mercados_Tab">Mercados</string>
    <string name="sight_name_var">sightName</string>
    <string name="sight_address_var">sightAddress</string>
    <string name="sight_time_var">sightTime</string>
    <string name="sight_price_var">sightPrice</string>
    <string name="sight_web_var">sightWeb</string>
    <string name="sight_map_var">sightMap</string>
    <string name="sight_description_var">sightDescription</string>
    <string name="sight_image_var">sightImage</string>
    <string name="museo_prado_name">Museo Nacional del Prado</string>
    <string name="museo_prado_address">Paseo del Prado, s\/n, 28014 Madrid</string>
    <string name="museo_prado_timetable">De lunes a sábado: de 10:00 a 20:00 h
        \nDomingos y festivos: de 10:00 a 19:00 h</string>
    <string name="museo_prado_price">De 0€ a 24€ </string>
    <string name="museo_prado_web">http://www.museodelprado.es/en </string>
    <string name="museo_prado_map">https://goo.gl/maps/FVCwV4nrvym </string>
    <string name="museo_prado_description">El Museo Nacional del Prado preside uno de los
        itinerarios turísticos más visitados de la capital: el Paseo del Arte. Además de Las
        meninas de Velázquez y de Los fusilamientos del 3 de mayo de Goya, en sus salas pueden
        verse obras maestras de las escuelas española, italiana y flamenca. El Prado cuenta con
        una valiosa colección de 8.600 cuadros y más de 700 esculturas.\n\nEs recomendable consultar
        una guía y preparar la visita antes de entrar en el museo.</string>
    <string name="palacio_real_name">Palacio Real</string>
    <string name="palacio_real_address">CalleBailén, s\/n, 28013 Madrid</string>
    <string name="palacio_real_timetable">Horario de invierno: Todos los días de 10:00 a 18:00 h
        \nHorario de verano:: de 10:00 a 20:00 h</string>
    <string name="palacio_real_price">De 0€ a 11€ </string>
    <string name="palacio_real_web">http://www.patrimonionacional.es/real-sitio/palacios/6039 </string>
    <string name="palacio_real_map">https://goo.gl/maps/TX3o5hebcwo</string>
    <string name="palacio_real_descripcion">Morada regia desde Carlos III hasta Alfonso XIII,
        el Palacio Real de Madrid nos propone un viaje por la Historia de España.
        Aunque no está habitado por los actuales monarcas, el recinto es la residencia oficial
        de los reyes.\n\nEl edificio se inspira en los bocetos realizados por Bernini para la
        construcción del Louvre de París. Se articula en torno a un patio cuadrado y cuenta con
        una galería y una Plaza de Armas, donde se sitúa la fachada principal del palacio. Tanto la
        decoración de cada sala, como su distribución han ido cambiando a lo largo de los años,
        adaptándose a las necesidades de sus reales inquilinos.</string>
    <string name="parque_retiro_name">Parque del Retiro</string>
    <string name="parque_retiro_address">Plaza de la Independencia, 7 28014 Madrid</string>
    <string name="parque_retiro_timetable">Primavera Verano: 06:00 a 00:00 h
        \nOtoño Invierno: de 06:00 a 22:00 h</string>
    <string name="parque_retiro_price">Entrada libre </string>
    <string name="parque_retiro_web">https://es.wikipedia.org/wiki/Parque_del_Retiro_de_Madrid </string>
    <string name="parque_retiro_map">https://goo.gl/maps/bxXdDCzKYEq</string>
    <string name="parque_retiro_descripcion">Con 125 hectáreas y más de 15.000 árboles, el parque
        de El Retiro es un remanso verde en el centro de Madrid. Especial atención merecen algunos
        de sus jardines: el jardín de Vivaces, los jardines de Cecilio Rodríguez
        (jardines clasicistas con aires andaluces), los jardines del Arquitecto Herrero Palacios,
        la Rosaleda (colección de rosas) y el Parterre Francés con el Ciprés Calvo, el árbol más
        antiguo de Madrid, del que se dice que podría tener alrededor de 400 años.</string>
    <string name="templo_debod_name">Templo de Debod</string>
    <string name="templo_debod_address">Calle Ferraz, 1 28008 Madrid</string>
    <string name="templo_debod_timetable">Martes a domingos: 10:00 a 20:00 h
        \nCerrado lunes</string>
    <string name="templo_debod_price">Gratuito</string>
    <string name="templo_debod_web">http://templodedebod.memoriademadrid.es</string>
    <string name="templo_debod_map">https://goo.gl/maps/tFDDfY978wu</string>
    <string name="templo_debod_descripcion">Se trata de un templo egipcio del siglo II a. d. C.
        instalado en el Parque del Cuartel de la Montaña, cerca de la Plaza de España. El
        templo fue donado a España por el gobierno egipcio para evitar que quedara inundado tras
        la construcción de la gran presa de Asuán.\n\nLa construcción del templo la inició a
        comienzos del siglo II a. C. el rey de Meroe Adijalamani, quien dedicó una capilla a los
        dioses Amón e Isis. La capilla está decorada con relieves. Posteriores reyes de la dinastía
        ptolemaica construyeron nuevas estancias alrededor del núcleo original. Tras la anexión de
        Egipto al Imperio Romano, los emperadores Augusto, Tiberio y, tal vez, Adriano, culminaron
        la construcción y decoración del edificio.</string>
    <string name="capricho_name">Parque el Capricho</string>
    <string name="capricho_address">Paseo Alameda de Osuna, 25 28042 Madrid</string>
    <string name="capricho_timetable">Sábados, domingos y festivos: 09:00 a 18:30 h</string>
    <string name="capricho_price">Gratuito</string>
    <string name="capricho_web">http://bit.ly/1HCjjCY</string>
    <string name="capricho_map">https://goo.gl/maps/iAGfx3VAL4H2</string>
    <string name="capricho_descripcion">Estamos ante uno de los espacios verdes que conforman el
        patrimonio artístico-natural de Madrid. Situado en Alameda de Osuna, es uno de los parques
        más bellos y, paradójicamente, de los más desconocidos (sobre todo su búnker de la Guerra
        Civil)​. Creado en 1784 por los Duques de Osuna y especialmente por la duquesa, doña María
        Josefa de la Soledad Alonso Pimentel. Protectora de artistas, toreros e intelectuales, la
        duquesa creó un auténtico paraíso natural que frecuentaron las personalidades más ilustres
        de la época y en el que trabajaron los artistas, jardineros y escenográfos con más
        prestigio.\n\nEl jardín ofrece tres estilos diferentes: el parterre o jardín francés, el
        paisaje inglés y el giardino italiano. Delante de la fachada oeste del palacio se extiende
        el parterre, con sus setos recortados como si de un bordado sobre la tierra se tratase. En
        la parte baja se sitúa el italiano, el espacio más antiguo de la finca, que mezcla los
        setos con árboles en los que tomar el sol en invierno o resguardarse a la sombra del sol
        veraniego. Cerca de éste, el laberinto, concebido para el juego amoroso y los escondites,
        está hecho con laurel y respeta los planos del que se plantó en vida de la duquesa. Por
        último, el resto del parque está concebido como un típico jardín paisajista inglés,
        evocando la naturaleza en su estado puro, que invita al paseo y a detenerse en los
        rincones más escondidos.</string>
    <string name="rey_vinos_name">El anciano Rey de los Vinos</string>
    <string name="rey_vinos_address">Calle Bailén, 19 28005 Madrid</string>
    <string name="rey_vinos_timetable">Lunes a domingos: 09:00 a 00:00 h
        \nCierra martes</string>
    <string name="rey_vinos_price">Hasta 15€</string>
    <string name="rey_vinos_web">http://www.elancianoreydelosvinos.es</string>
    <string name="rey_vinos_map">https://goo.gl/maps/RdUi7yq79Bu</string>
    <string name="rey_vinos_descripcion">El joven matrimonio que regenta la taberna ha dado un
        toque de actualidad al menú de esta antigua taberna, pero conservando su ambiente castizo,
        de modo que ha sabido aunar con elegancia “lo viejo y lo nuevo” de este lugar entrañable
        ubicado en una zona privilegiada frente a dos joyas madrileñas: el Palacio Real y la
        Catedral de la Almudena. \n \n
        El local es aproximadamente de 1886 y en él estaba instalada
        una taberna típica, Casa Pedro Martínez, donde se vendía café de puchero, aguardiente y té.
        En 1909, se cede a Luís Montón, que patenta las marcas de vino “el Viejo”, “los Viejos” y
        “el Anciano Rey”, de donde procede el nombre de la actual taberna, que, por cierto, sigue
        vendiendo dichos caldos, secos y dulces. Durante la época republicana hubo que eliminar
        del rótulo y las mesas la palabra REY.</string>
    <string name="botin_name">Botín</string>
    <string name="botin_address">Calle Cuchilleros, 17 28005 Madrid</string>
    <string name="botin_timetable">Lunes a domingos: 13:00 a 16:00 h
        \n20:00 a 24:00 h</string>
    <string name="botin_price">De 31 a 45€</string>
    <string name="botin_web">http://http://www.botin.es</string>
    <string name="botin_map">https://goo.gl/maps/NP16jRjN9cF2</string>
    <string name="botin_descripcion">Fundado en 1725 por Jean Botín, un cocinero francés, y su
        esposa, de origen asturiano, el libro Guinness de los Récords lo reconoce como el
        restaurante más antiguo del mundo. La larga historia de Botín se refleja en su presencia
        en obras de escritores como Galdós (Fortunata y Jacinta, Misericordia), Hemingway (Fiesta),
        Graham Greene (Monseñor Quijote), Gómez de la Serna (en sus Greguerías) o, actualmente,
        María Dueñas (El tiempo entre costuras).\n\nEl restaurante ocupa las cuatro plantas del
        inmueble y conserva el ambiente de posada original, tanto que el horno de leña de la casa
        que aún hoy en día sigue asando cochinillos y corderos en la calle Cuchilleros es el mismo
        que el de 1725. Actualmente, Botín (situado por la prestigiosa revista Forbes en el
        número 3 de la lista de los restaurantes clásicos del mundo) es regentado por la cuarta
        generacion de la familia González, sucesora de la familia fundadora.</string>
    <string name="viuda_name">Viuda de Vacas</string>
    <string name="viuda_address">Calle el Aguila, 2 28005 Madrid</string>
    <string name="viuda_timetable">Viernes a miércoles: 13:00 a 16:30 h
        \n20:00 a 00:00 h</string>
    <string name="viuda_price">De 16 a 30€</string>
    <string name="viuda_web">http://http://viudadevacas.es/</string>
    <string name="viuda_map">https://goo.gl/maps/HSmFsMxhD692</string>
</resources>